--- a/src/app/layout/grupo-oracao-table/components/servos/components/servos-dialog/servos-dialog.component.html
+++ b/src/app/layout/grupo-oracao-table/components/servos/components/servos-dialog/servos-dialog.component.html
@@ -68,7 +68,7 @@
                             <option value="familias">Para as Famílias</option>
                             <option value="pregacao">Pregação</option>
                             <option value="promocao-humana">Promoção Humana</option>
-                            <option value="religiosas">Para as Religiosas</option>
+                            <option value="religiosas">Religiosas</option>
                             <option value="seminaristas">Seminaristas</option>
                             <option value="universidades">Universidades</option>
                           </select>
@@ -92,7 +92,7 @@
                             <option value="familias">Para as Famílias</option>
                             <option value="pregacao">Pregação</option>
                             <option value="promocao-humana">Promoção Humana</option>
-                            <option value="religiosas">Para as Religiosas</option>
+                            <option value="religiosas">Religiosas</option>
                             <option value="seminaristas">Seminaristas</option>
                             <option value="universidades">Universidades</option>
                           </select>
