--- a/src/app/layout/administracao/usuarios/components/dialog/usuarios-dialog.component.html
+++ b/src/app/layout/administracao/usuarios/components/dialog/usuarios-dialog.component.html
@@ -8,6 +8,8 @@
         <input type="hidden" formControlName="id">
         <input type="hidden" formControlName="createdAt">
         <input type="hidden" formControlName="updatedAt">
+        <input type="hidden" formControlName="active">
+
         <div class="row">
             <div class="col-lg-6">
                 <div class="form-group">
