--- a/src/app/layout/grupo-oracao-table/components/dados-cadastrais/dados-cadastrais.component.html
+++ b/src/app/layout/grupo-oracao-table/components/dados-cadastrais/dados-cadastrais.component.html
@@ -30,12 +30,12 @@
                                 <label for="exampleInputEmail1">Dia da Semana *</label>
                                 <select class="form-control" formControlName="dayOfWeek">
                                     <option value="sunday">Domingo</option>
-                                    <option value="monday">Segunda</option>
-                                    <option value="tuesday">Terça</option>
-                                    <option value="wednesday">Quarta</option>
-                                    <option value="thursday">Quinta</option>
-                                    <option value="friday">Sexta</option>
-                                    <option value="saturday">Sabado</option>
+                                    <option value="monday">Segunda-feira</option>
+                                    <option value="tuesday">Terça-feira</option>
+                                    <option value="wednesday">Quarta-feira</option>
+                                    <option value="thursday">Quinta-feira</option>
+                                    <option value="friday">Sexta-feira</option>
+                                    <option value="saturday">Sábado</option>
                                   </select>
                             </div>
                         </div>
