--- a/src/app/layout/grupo-oracao-table/components/dados-cadastrais/dados-cadastrais.component.html
+++ b/src/app/layout/grupo-oracao-table/components/dados-cadastrais/dados-cadastrais.component.html
@@ -114,6 +114,26 @@
                         </div>
                     </div>
                     <div class="row">
+                        <div class="col-lg-12">
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Url Forms</label>
+                                <input type="text" class="form-control" formControlName="formsUrl" >
+                            </div>
+                        </div>
+                        
+                    </div>
+                    <div class="row" *ngIf="user == 'administrador'">
+                        <div class="col-lg-10">
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Url CSV</label>
+                                <input type="text" class="form-control" formControlName="csvUrl" >
+                            </div>
+                        </div>
+                        <div class="col-lg-2">
+                            <button type="button" style="margin-top: 25px;" class="btn btn-sm btn-primary" (click)="importCSV()">Importar CSV</button>
+                        </div>
+                    </div>
+                    <div class="row">
                         <div class="col-lg-6">
                             <div class="form-group">
                                 <label for="exampleInputEmail1">Cidade *</label>
