--- a/src/app/layout/administracao/usuarios/components/dialog/usuarios-dialog.component.html
+++ b/src/app/layout/administracao/usuarios/components/dialog/usuarios-dialog.component.html
@@ -4,7 +4,7 @@
     <button type="button" class="btn-close" aria-label="Close" (click)="activeModal.dismiss('Cross click')"></button>
 </div>
 <div class="modal-body">
-    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+    <form [formGroup]="form">
         <input type="hidden" formControlName="id">
         <input type="hidden" formControlName="createdAt">
         <input type="hidden" formControlName="updatedAt">
@@ -60,7 +60,7 @@
         <div class="row">
             <div class="col-lg-1">
                 <div class="form-check form-check-inline" style="margin-top: 20px;">
-                    <input class="form-check-input"  type="checkbox" formControlName="active" (change)="change($event)" #administrator>
+                    <input class="form-check-input"  type="checkbox" (change)="change($event)" #administrator>
                     <label class="form-check-label" >Administrador?</label>
                 </div>
             </div>
