--- a/src/app/layout/administracao/servos-list/components/servos-list-table/servos-list-table.component.html
+++ b/src/app/layout/administracao/servos-list/components/servos-list-table/servos-list-table.component.html
@@ -47,9 +47,8 @@
                 <th scope="col">Nome</th>
                 <th scope="col">Min. Principal</th>
                 <th scope="col">Min. Secundário</th>
+                <th scope="col">Telefone</th>
                 <th scope="col">Validado</th>
-                
-                <th></th>
               </tr>
             </thead>
             <tbody>
@@ -59,6 +58,7 @@
                 <td>{{item.name}}</td>
                 <td>{{item.mainMinistry}}</td>
                 <td>{{item.secondaryMinistry}}</td>
+                <td>{{item.cellPhone}}</td>
                 <td>{{item.checked ? 'Sim' : 'Não'}}</td>
               </tr>
             </tbody>
