ajuste nome do ministerio

--- a/src/app/layout/grupo-oracao-table/components/servos/components/servos-dialog/servos-dialog.component.html
+++ b/src/app/layout/grupo-oracao-table/components/servos/components/servos-dialog/servos-dialog.component.html
@@ -56,7 +56,7 @@
                         <select class="form-control"  formControlName="mainMinistry">
                             <option value="discernimento">Em Discernimento</option>
                             <option value="coordenadores">Coordenação</option>
-                            <option value="comunicacao">Comunicação Social</option>
+                            <option value="comunicacao-social">Comunicação Social</option>
                             <option value="criancas-adolescentes">Crianças e Adolescentes</option>
                             <option value="cristo-sacerdote">Cristo Sacerdote</option>
                             <option value="cura-libertacao">Cura e Libertação</option>
@@ -80,7 +80,7 @@
                         <select class="form-control" formControlName="secondaryMinistry" >
                             <option value="discernimento">Em Discernimento</option>
                             <option value="coordenadores">Coordenação</option>
-                            <option value="comunicacao">Comunicação Social</option>
+                            <option value="comunicacao-social">Comunicação Social</option>
                             <option value="criancas-adolescentes">Crianças e Adolescentes</option>
                             <option value="cristo-sacerdote">Cristo Sacerdote</option>
                             <option value="cura-libertacao">Cura e Libertação</option>
